// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Forecast /> should render the loader when weather data is loading 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <CurrentWeather
    country="Australia"
    currentWeatherData={
        Object {
            "main": Object {
              "temp": 21.87,
            },
            "name": "Melbourne",
            "weather": Array [
              Object {
                "description": "light rain",
                "id": 500,
              },
            ],
          }
    }
    placeData={
        Object {
            "address_components": Array [
              Object {
                "long_name": "Melbourne",
              },
            ],
            "utc_offset": 600,
          }
    }
    showBack={[Function]}
    weatherLoading={true}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "color": "#fff",
      "delay": 0,
      "height": 64,
      "type": "spin",
      "width": 64,
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "color": "#fff",
        "delay": 0,
        "height": 64,
        "type": "spin",
        "width": 64,
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getSnapshotBeforeUpdate": true,
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`<Forecast /> should render the weather info of all five days provided 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <CurrentWeather
    country="Australia"
    currentWeatherData={
        Object {
            "main": Object {
              "temp": 21.87,
            },
            "name": "Melbourne",
            "weather": Array [
              Object {
                "description": "light rain",
                "id": 500,
              },
            ],
          }
    }
    placeData={
        Object {
            "address_components": Array [
              Object {
                "long_name": "Melbourne",
              },
            ],
            "utc_offset": 600,
          }
    }
    showBack={[Function]}
    weatherLoading={false}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": Array [
        <div
          className="widget_left_item-top"
>
          <TimeClock
                    UtcOffSet={600}
          />
          <h1>
                    Light rain
          </h1>
</div>,
        <div
          className="widget_left_item-bottom"
>
          <div
                    className="current_weather_icon"
          >
                    <div
                              className="current_weather_icon-top"
                    >
                              <WeatherIcon
                                        iconId="500"
                                        name="owm"
                              />
                    </div>
                    <div
                              className="current_weather_icon-bottom"
                    >
                              22
                              °C
                    </div>
          </div>
          <div>
                    Melbourne
                    , Australia
          </div>
          <button
                    onClick={[Function]}
          >
                    Change Location
          </button>
</div>,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <TimeClock
              UtcOffSet={600}
/>,
            <h1>
              Light rain
</h1>,
          ],
          "className": "widget_left_item-top",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "UtcOffSet": 600,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Light rain",
            },
            "ref": null,
            "rendered": "Light rain",
            "type": "h1",
          },
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="current_weather_icon"
>
              <div
                            className="current_weather_icon-top"
              >
                            <WeatherIcon
                                          iconId="500"
                                          name="owm"
                            />
              </div>
              <div
                            className="current_weather_icon-bottom"
              >
                            22
                            °C
              </div>
</div>,
            <div>
              Melbourne
              , Australia
</div>,
            <button
              onClick={[Function]}
>
              Change Location
</button>,
          ],
          "className": "widget_left_item-bottom",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <div
                  className="current_weather_icon-top"
>
                  <WeatherIcon
                                    iconId="500"
                                    name="owm"
                  />
</div>,
                <div
                  className="current_weather_icon-bottom"
>
                  22
                  °C
</div>,
              ],
              "className": "current_weather_icon",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": <WeatherIcon
                    iconId="500"
                    name="owm"
/>,
                  "className": "current_weather_icon-top",
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "iconId": "500",
                    "name": "owm",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                "type": "div",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    22,
                    "°C",
                  ],
                  "className": "current_weather_icon-bottom",
                },
                "ref": null,
                "rendered": Array [
                  22,
                  "°C",
                ],
                "type": "div",
              },
            ],
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                "Melbourne",
                ", Australia",
                false,
              ],
            },
            "ref": null,
            "rendered": Array [
              "Melbourne",
              ", Australia",
              false,
            ],
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Change Location",
              "onClick": [Function],
            },
            "ref": null,
            "rendered": "Change Location",
            "type": "button",
          },
        ],
        "type": "div",
      },
    ],
    "type": Symbol(react.fragment),
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          <div
            className="widget_left_item-top"
>
            <TimeClock
                        UtcOffSet={600}
            />
            <h1>
                        Light rain
            </h1>
</div>,
          <div
            className="widget_left_item-bottom"
>
            <div
                        className="current_weather_icon"
            >
                        <div
                                    className="current_weather_icon-top"
                        >
                                    <WeatherIcon
                                                iconId="500"
                                                name="owm"
                                    />
                        </div>
                        <div
                                    className="current_weather_icon-bottom"
                        >
                                    22
                                    °C
                        </div>
            </div>
            <div>
                        Melbourne
                        , Australia
            </div>
            <button
                        onClick={[Function]}
            >
                        Change Location
            </button>
</div>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <TimeClock
                UtcOffSet={600}
/>,
              <h1>
                Light rain
</h1>,
            ],
            "className": "widget_left_item-top",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "UtcOffSet": 600,
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Light rain",
              },
              "ref": null,
              "rendered": "Light rain",
              "type": "h1",
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                className="current_weather_icon"
>
                <div
                                className="current_weather_icon-top"
                >
                                <WeatherIcon
                                                iconId="500"
                                                name="owm"
                                />
                </div>
                <div
                                className="current_weather_icon-bottom"
                >
                                22
                                °C
                </div>
</div>,
              <div>
                Melbourne
                , Australia
</div>,
              <button
                onClick={[Function]}
>
                Change Location
</button>,
            ],
            "className": "widget_left_item-bottom",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <div
                    className="current_weather_icon-top"
>
                    <WeatherIcon
                                        iconId="500"
                                        name="owm"
                    />
</div>,
                  <div
                    className="current_weather_icon-bottom"
>
                    22
                    °C
</div>,
                ],
                "className": "current_weather_icon",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": <WeatherIcon
                      iconId="500"
                      name="owm"
/>,
                    "className": "current_weather_icon-top",
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "function",
                    "props": Object {
                      "iconId": "500",
                      "name": "owm",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                  "type": "div",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [
                      22,
                      "°C",
                    ],
                    "className": "current_weather_icon-bottom",
                  },
                  "ref": null,
                  "rendered": Array [
                    22,
                    "°C",
                  ],
                  "type": "div",
                },
              ],
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  "Melbourne",
                  ", Australia",
                  false,
                ],
              },
              "ref": null,
              "rendered": Array [
                "Melbourne",
                ", Australia",
                false,
              ],
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Change Location",
                "onClick": [Function],
              },
              "ref": null,
              "rendered": "Change Location",
              "type": "button",
            },
          ],
          "type": "div",
        },
      ],
      "type": Symbol(react.fragment),
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getSnapshotBeforeUpdate": true,
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;
